Mon Jan 14 06:06:03 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix/eigenvalue_decomposition: Backport bugfix of Jama 1.0.3
	  [rubyspec:df87040be371]

Sun Jan 13 16:45:00 2013  Zachary Scott <zachary@zacharyscott.net>

	* ext/psych/yaml/scanner.c: Fix typos, patch by James Dabbs
	  [Github tenderlove/psych#118]

Sun Jan 13 15:00:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_sub):
	  need to specify precision for converting Rational and Float.
	  [ruby-dev:46544] [Bug #7404]

	* ext/bigdecimal/bigdecimal.c (BigDecimal_mult): ditto.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_divide): ditto.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_DoDivmod): ditto.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_divremain): ditto.

	* test/bigdecimal/test_bigdecimal.rb: add tests for the above fixes.

Sun Jan 13 14:48:55 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix/eigenvalue_decomposition: Fix eigensystem with complex
	  eigenvectors. Patch by pypypy567.
	  [Bug #7208] [ruby-dev:46251] [rubyspec:242f8e55bd]

    * lib/matrix/lup_decomposition.rb: Fix error for rectangular matrices
      [bug#7620] [ruby-core:51118] [rubyspec:41f833ee2]

Sun Jan 13 14:06:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/irb.rb, lib/prime.rb: Typos in overview
	  Patch by Ershad K [Github Fixes #234]

Sun Jan 13 13:40:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/open3.rb : Typo in Open3 overview. Patch by zed_0xff
	  [Github Fixes #233]

Sat Jan 12 17:42:00 2013  Kenta Murata  <mrkn@cookpad.com>

	* numeric.c (do_coerce): fix for the exceptions which the coerce
	  method raises.  The optimization done by r38756 is preserved.
	  [Bug #7645] [ruby-core:51213]

Sat Jan 12 16:12:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/setup.mak (-runtime-): see msvcrt from link header on mswin
	  instead of running testing executable file, for cross compiling.
